# Python-Journey

./: README.md  export_marimo.py
algorithms/: README.md  pyproject.toml
data-processing/: README.md  main.py  pyproject.toml
data-visualization/: README.md  dv.py  pyproject.toml
deep-learning/: README.md  linear_regression.py  loan_approval.py  pyproject.toml
differential-calculus/: README.md  main.py  pyproject.toml
linear-algebra/: README.md  pyproject.toml
machine-learning/: .gitignore  README.md  model.onnx  package.json  pnpm-lock.yaml  pyproject.toml  save.py  verify.py  verify.ts
my-jupyter-project/: hello_world.ipynb  main.py  pyproject.toml
my-marimo-project/: 2025.csv  actual.csv  main.py  predict.py  predict_petite.py  predict_pl.py  pyproject.toml
my-project/: 2026.csv  README.md  predict_pd.py  predict_pl.py  pyproject.toml
numerical-computing/: README.md  broadcasting.py  copy_and_view.py  hello_world.py  hello_world_notebook.py  main.py  pyproject.toml
numerical-computing/scripts/: broadcasting.py  copy_and_view.py  hello_world.py
programming/: README.md  comments.py  data_types.py  functions.py  getting_started.py  hello_world.py  main.py  output.py  pyproject.toml  variables.py
programming/scripts/: hello_world.py
statistics-and-probability/: README.md  main.py  pyproject.toml
vue/: pnpm-lock.yaml
