[project]
name = "data-visualization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "marimo>=0.23.4",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
