[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers[torch]>=5.5.4",
]

[dependency-groups]
dev = [
    "marimo>=0.23.4",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
