[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "onnxruntime>=1.26.0",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
    "skl2onnx>=1.20.0",
]

[dependency-groups]
dev = [
    "marimo>=0.23.4",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I"]
